--- a/part5/bloglist-frontend/src/style.scss
+++ b/part5/bloglist-frontend/src/style.scss
@@ -19,3 +19,10 @@ button {
 .success {
   color: green;
 }
+
+.blog {
+  padding: 10px 4px;
+  border: 1px solid black;
+  margin-bottom: 5px;
+  border-radius: 4px;
+}
